--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,9 @@ jobs:
             - run: git config --global user.email bot@warframeblog.com
             - run: git config --global user.name CircleCI
             - run:
+                name: Install tar
+                command: apk add --no-cache tar
+            - run:
                 name: Install Hugo
                 command:  wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/${HUGO_BINARY} && \
                   tar xzf ${HUGO_BINARY} && \
