--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "postcss": "^7.0.14",
     "postcss-csso": "^3.0.0",
     "postcss-uncss": "^0.16.1",
+    "prettier": "^1.18.2",
     "rimraf": "^2.6.3",
     "rollup": "^1.10.1",
     "rollup-plugin-babel": "^4.3.2",
