--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,38 +1,38 @@
 version: 2
 
 jobs:
-    build:
-        docker:
-            - image: node:10.16.3-alpine
-              environment:
-                HUGO_VERSION: 0.58.2
-        working_directory: ~/warframeblog
-        steps:
-            - run:
-                name: Update git
-                command: apk update && apk add git
-            - run: git --version
-            - run:
-                name: Install OpenSSH
-                command: apk update && apk add openssh
-            - add_ssh_keys:
-                fingerprint:
-                    - "4d:bc:43:fc:36:51:1a:8c:4b:a9:2d:15:a6:8d:d8:34"
-            - run: git config --global user.email bot@warframeblog.com
-            - run: git config --global user.name CircleCI
-            - checkout
-            - run:
-                name: Checkout submodules
-                command: git submodule sync && git submodule update --init themes/hesti && git submodule update --init static/wp-content/uploads/2017 && git submodule update --init static/wp-content/uploads/2018
-            - run:
-                name: Install dependencies
-                command: npm install
-            - run:
-                name: Mark script as executable
-                command: chmod +x ./.circleci/publish_to_ghpages.sh
-            - run:
-                name: Build and publish site
-                command: ./.circleci/publish_to_ghpages.sh
+  build:
+    docker:
+      - image: node:10.16.3-alpine
+        environment:
+          HUGO_VERSION: 0.58.2
+    working_directory: ~/warframeblog
+    steps:
+      - run:
+          name: Update git
+          command: apk update && apk add git
+      - run: git --version
+      - run:
+          name: Install OpenSSH
+          command: apk update && apk add openssh
+      - add_ssh_keys:
+          fingerprint:
+            - "4d:bc:43:fc:36:51:1a:8c:4b:a9:2d:15:a6:8d:d8:34"
+      - run: git config --global user.email bot@warframeblog.com
+      - run: git config --global user.name CircleCI
+      - checkout
+      - run:
+          name: Checkout submodules
+          command: git submodule sync && git submodule update --init themes/hesti && git submodule update --init static/wp-content/uploads/2017 && git submodule update --init static/wp-content/uploads/2018
+      - run:
+          name: Install dependencies
+          command: npm ci
+      - run:
+          name: Build Site
+          command: npm run build
+      - run:
+          name: Publish Site
+          command: npm run publish
 
 workflows:
   version: 2
