--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "[![CircleCI](https://circleci.com/gh/warframeblog/warframeblog/tree/develop.svg?style=svg)](https://circleci.com/gh/warframeblog/warframeblog/tree/develop)",
   "scripts": {
-    "start": "concurrently \"gulp\" \"hugo serve \"",
-    "start:test": "http-server -p 1313",
-    "build": "gulp build --max_old_space_size=2000",
-    "primes": "node scripts/primes-generator"
+    "start": "concurrently \"npm run gulp\" \"hugo serve \"",
+    "gulp": "gulp --cwd . -f themes/hesti/gulpfile.js",
+    "build": "npm run gulp -- build:site",
+    "test:build": "serve public",
+    "publish": "npm run gulp -- publish:site"
   },
   "repository": {
     "type": "git",
@@ -19,52 +20,49 @@
     "url": "https://github.com/warframeblog/warframeblog/issues"
   },
   "homepage": "https://warframeblog.com/",
-  "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "angled-edges": "^2.0.0",
-    "autoprefixer": "^9.5.1",
-    "axios": "^0.18.0",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "bootstrap": "4.0.x",
-    "bootstrap-material-design": "^4.1.1",
-    "cheerio": "^1.0.0-rc.2",
-    "concurrently": "^4.1.0",
-    "csso": "^3.5.1",
-    "gray-matter": "^4.0.2",
-    "gulp": "^4.0.1",
-    "gulp-autoprefixer": "^6.1.0",
-    "gulp-better-rollup": "^4.0.1",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-ignore": "^2.0.2",
-    "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-shell": "^0.7.0",
-    "gulp-sourcemaps": "^2.6.4",
-    "http-server": "^0.11.1",
-    "inquirer": "^6.2.2",
-    "jquery": "^3.4.0",
-    "lazysizes": "^4.1.8",
-    "lodash": "^4.17.11",
-    "node-sass": "^4.12.0",
-    "number-to-words": "^1.2.4",
-    "popper.js": "^1.15.0",
-    "postcss": "^7.0.14",
-    "postcss-csso": "^3.0.0",
-    "postcss-uncss": "^0.16.1",
-    "prettier": "^1.18.2",
-    "rimraf": "^2.6.3",
-    "rollup": "^1.10.1",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-babel-minify": "^8.0.0",
-    "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-node-resolve": "^4.2.3",
-    "uncss": "^0.16.2"
-  },
   "dependencies": {
-    "hugo-bin": "^0.46.2"
+    "angled-edges": "^2.0.0",
+    "concurrently": "^4.1.0",
+    "gulp": "^4.0.2",
+    "hesti": "file:themes/hesti"
+  },
+  "gulpSettings": {
+    "jsSources": {
+      "base": [
+        "index.js",
+        "lazysizes.js"
+      ]
+    },
+    "styleSources": {
+      "base": [
+        "hesti.scss"
+      ],
+      "extended": [
+        "builds.scss",
+        "fortuna.scss",
+        "primes.scss",
+        "warframe-page.scss"
+      ]
+    },
+    "htmlFilesToParseStyles": [
+      "/baro-kiteer-void-trader/*.html",
+      "/sanctuary-onslaught-guide/*.html",
+      "/warframe-nightwave-intermission/*.html",
+      "/primes/how-to-get-equinox-prime/*.html",
+      "/guides/**/*.html",
+      "/fortuna/*.html",
+      "/builds/index.html",
+      "/warframes/index.html",
+      "/warframes/ash/*.html",
+      "/warframes/nezha/*.html",
+      "/primes/index.html"
+    ],
+    "selectorsToIgnore": [
+      ".*\\.carousel-item*"
+    ]
+  },
+  "devDependencies": {
+    "prettier": "^1.18.2",
+    "serve": "^11.2.0"
   }
 }
