--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,8 @@ jobs:
       - checkout
       - run:
           name: Checkout submodules
-          command: git submodule sync && git submodule update --init themes/hesti && git submodule update --init static/wp-content/uploads/2017 && git submodule update --init static/wp-content/uploads/2018
-      - run:
+          command: git submodule sync && git submodule update --init --recursive
+       - run:
           name: Install dependencies
           command: npm ci
       - run:
