--- a/data/theme/hero.yaml
+++ b/data/theme/hero.yaml
@@ -1,2 +1,2 @@
-heading: Warframe Blog
+heading: Welcome Tenno!
 description: Useful Warframe guides, warframe and weapon builds, Warframe resource farming guides and latest news about Warframe updates.
